# proton3

./: .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
maxmsp/: README.md  data.json  node-proton3.js  node-proton3.maxpat  package.json  proton3.maxpat  script.py
maxmsp/time_dependent/: one-dimension_time_dependent.js  one-dimension_time_dependent.maxpat
proton3/: generate_audio.py  potentials.py  waveforms.py
proton3/audio/: file_generator.py  utils.py
proton3/constants/: atomic_units.py
proton3/examples/: one_dimensioanl_hydrogen_atom.py  one_dimensional_quantum_barrier.py  one_dimesional_harmonic_oscillator.py  two_dimensional_harmonic_oscillator.py
proton3/host/: streamlit_main.py
proton3/host/pages/: free_particle.py  harmonic_oscillator.py  home.py  hydrogen.py  quantum_barrier.py
proton3/one_dimensional/: solver.py
proton3/potentials/: barriers.py  coloumb.py  free.py  oscillators.py
proton3/systems/: analytical.py  one_dimensional.py  two_dimensional.py
