[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "proton3"
version = "0.1.1"
authors = [
  { name="Bajoukx", email="zebajoukx@gmail.com" },
]
description = "A package for the proton3 project."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/Bajoukx/proton3"