[metadata]
name = proton3
version = 0.1.1
description = A package for the proton3 project.
long_description = file: README.md
author = Bajoukx
author_email = zebajoukx@gmail.com
url = https://github.com/pypa/Bajoukx/proton3
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.9
install_requires = 
    absl-py
    pylint
    yapf
    numpy
    qmsolve[with_mayavi]
    pydub
    streamlit
    st-pages

